--- a/eh_archive/output/authors.html
+++ b/eh_archive/output/authors.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" type="text/css" href="/theme/css/pygments-highlight-github.css">
 
     <!-- Icon -->
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
     <!-- JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -48,6 +49,8 @@
           <ul>
             <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/welcome-to.html">Welcome to .... !</a></li>
             <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/pages/das-struggle-bus.html">Das Struggle Bus!</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/categories.html">Categories</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="/archives.html">Archive</a></li>
           </ul>
         </nav>
       </header>
@@ -69,7 +72,7 @@
       <div id="footer-copyright" class="w3-center w3-small w3-text-grey w3-padding-48">
         <span>
           &copy;
-          eh_admin
+          2009&dash;2025          eh_admin
         </span>
       </div>
     </footer>
