add projects.md / projects.html files

--- a/output/index.html
+++ b/output/index.html
@@ -10,9 +10,10 @@
 
         <body id="index" class="home">
                 <header id="banner" class="body">
-                        <h1><a href="/">eh_archive</a></h1>
+                        <h1><a href="/">EH Projects Archive</a></h1>
                         <nav><ul>
                                                 <li class="active"><a href="/index.html">Center for Experimental Humanities Project Archive x Solar</a></li>
+                                                <li><a href="/projects.html">Project archive</a></li>
                         </ul></nav>
                 </header><!-- /#banner -->
   <section id="content" class="body">
